@@ -1,0 +1,10 @@
+Title: Git integration: Using mail address of user in author info
+Level: 1
+Component: wato
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i2p5
+Date: 1480322901
+
+
