@@ -11,6 +11,7 @@
 
     WATO:
     * 4068 FIX: Fixed possible exception in case of wrong automation secrets between multiple sites...
+    * 4076 FIX: Git integration: Using mail address of user in author info
 
 
 1.4.0i2p4:
